[package]
name = "my_cli_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
crossterm = "0.29.0"
ratatui = "0.30.2"
ureq = { version = "2.10.1", features = ["tls"] }
candle-core = "0.8.0"
candle-transformers = "0.8.0"
tokenizers = { version = "0.21.0", default-features = false, features = ["onig"] }

[build-dependencies]
ureq = { version = "2.10.1", features = ["tls"] }
